Modifica per caricare da controller correttamente le immagini Signed-off-by: Vincenzo Dimino <vincenzodimino@yahoo.it>
Change-Id: I26d3a0d4c8785bab59f27a96dd2cb26f4346e51d